--- a/doc/00uvod.tex
+++ b/doc/00uvod.tex
@@ -1,2 +1,6 @@
-\chapter{Uvod}
-Proba
+\chapter{Uvod}\label{uvod}
+Cilj ovog rada jeste izrada web aplikacije čija je namena da pomogne studentima pri savladavanju gradiva iz oblasti \emph{formalne logike} koja se izučava na predmetu Ekspertski sistemi (IR4ES). Namera je da se ovo postigne kombinacijom testova sa interaktivnom demonstracijom osnovnih koncepata iz ove tematike. Administrator bi mogao kontrolisati uspešnost studenata na testovima, i postavljati nove testove i demonstracije.
+
+Tokom prethodnih godina, izrađene su dve aplikacije u istu svrhu: Java aplikacija i aplikacija za Android mobilne uređaje. Na žalost, ni jedna ni druga ne nude mogućnost lakog dodavanja novog sadržaja, kao ni mogućnost administracije. Zbog toga što se može koristiti na svim uređajima, web aplikacija koja je predmet ovog rada ispravlja nedostatke i proširuje skup funkcionalnosti postojećih rešenja.
+
+Ovaj dokument je podeljen na pet celina. U glavi \ref{uvod}, trenutnoj sekciji, se navodi kratak opis teme i struktura dokumenta. Potom sledi sekcija \ref{zahtevi} sa zahtevima za realizaciju, koja sadrži korisničke zahteve, kao i opis korišćenih tehnologija. Nakon toga se nalazi glava \ref{sistem} u kome je detaljno opisan rad sistema, kao i način upotrebe. U ovom delu nalazi se i poveći broj slika koje ilustruju aspekte rada sistema. U pretposlednjoj glavi \ref{realizacija} se nalazi selekcija interesantnih izazova na koje je autor naišao tokom izrade, kao i načini na koji su ovi problemi prevaziđeni (uz prateće delove izvornog koda). Napokon, u poslednjoj glavi \ref{zakljucak} su izložena završna posmatranja i moguće nadogradnje sistema.
