--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,19 +1,28 @@
 \documentclass[12pt,a4paper,titlepage]{report}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[serbian]{babel}
+\usepackage[english,serbian]{babel}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
+\usepackage[backend=biber]{biblatex}
+\usepackage{graphicx}
+
+\graphicspath{{images/}}
+\setlength{\parskip}{0.8em}
+
+\addbibresource{literatura.bib}
 \author{Dimitrije Radojević \\ br. ind. 09/0112 \\ Elektrotehnički fakultet, Univerzitet u Beogradu}
 \title{Diplomski rad}
 \date{20. septembar 2016.}
 \begin{document}
 \maketitle
+\tableofcontents
 \input{00uvod.tex}
 \input{01zahtevi.tex}
 \input{02sistem.tex}
 \input{03realizacija.tex}
 \input{04zakljucak.tex}
-\input{05literatura.tex}
+\renewcommand\bibname{Reference}
+\printbibliography
 \end{document}
