--- a/doc/literatura.bib
+++ b/doc/literatura.bib
@@ -1,27 +1,34 @@
 @book{Emerick:2012:CP,
 	publisher =    "O'Reilly Media, Inc.",
-	address =      "1005 Gravenstein Highway North, Sebastopol, CA 95472, USA",
-	author =       "Chas Emerick and Brian Carper and Christophe Grand",
-	title =        "{Clojure} programming",
-	year =         "2012",
-	isbn =         "1-4493-9470-1"
+	author =		"Chas Emerick and Brian Carper and Christophe Grand",
+	title =			"{Clojure} Programming",
+	year =			"2012",
+	isbn =			"1-4493-9470-1"
+}
+
+@book{Higginbotham:2015:CBT,
+	publisher =	"No Starch Press",
+	author =		"Daniel Higginbotham",
+	title =			"{Clojure} for the {Brave} and {True}",
+	subtitle =		"Learn the Ultimate Language and Become a Better Programmer",
+	year =			"2015",
+	isbn =			"1-5932-7591-9"
 }
 
 @online{postgres,
 title = {PostgreSQL: The world's most advanced open source database},
 url = {https://www.postgresql.org},
-urldate = "2012-01-01"
+urldate = "2016-09-20"
+}
+
+@online{compojure,
+title = {Compojure - A concise routing library for Ring/Clojure},
+url = {https://github.com/weavejester/compojure},
+urldate = "2016-09-20"
 }
 
 @online{ring,
 title = {Ring - Clojure HTTP server abstraction},
 url = {https://github.com/ring-clojure/ring},
-urldate = "2016-09-20"
-}
-
-@online{ring-spec,
-title = {Ring Spec},
-version = {1.4-SNAPSHOT},
-url = {https://github.com/ring-clojure/ring/blob/master/SPEC},
 urldate = "2016-09-20"
 }
