--- a/doc/main.tex
+++ b/doc/main.tex
@@ -6,10 +6,11 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage[backend=biber]{biblatex}
+\usepackage{hyperref}
 \usepackage{graphicx}
 
 \graphicspath{{images/}}
-\setlength{\parskip}{0.8em}
+%\setlength{\parskip}{0.6em}
 
 \addbibresource{literatura.bib}
 \author{Dimitrije Radojević \\ br. ind. 09/0112 \\ Elektrotehnički fakultet, Univerzitet u Beogradu}
