--- a/doc/literatura.bib
+++ b/doc/literatura.bib
@@ -16,19 +16,31 @@
 }
 
 @online{postgres,
-title = {PostgreSQL: The world's most advanced open source database},
-url = {https://www.postgresql.org},
-urldate = "2016-09-20"
+	title = 			{PostgreSQL: The world's most advanced open source database},
+	url =				{https://www.postgresql.org},
+	urldate =		"2016-09-20"
 }
 
 @online{compojure,
-title = {Compojure - A concise routing library for Ring/Clojure},
-url = {https://github.com/weavejester/compojure},
-urldate = "2016-09-20"
+	title =			{Compojure - A concise routing library for Ring/Clojure},
+	url =				{https://github.com/weavejester/compojure},
+	urldate =		"2016-09-20"
 }
 
 @online{ring,
-title = {Ring - Clojure HTTP server abstraction},
-url = {https://github.com/ring-clojure/ring},
-urldate = "2016-09-20"
+	title =			{Ring - Clojure HTTP server abstraction},
+	url =				{https://github.com/ring-clojure/ring},
+	urldate =		"2016-09-20"
+}
+
+@online{angularjs,
+	title =			{AngularJS - Superheroic JavaScript MVW Framework},
+	url =				{https://angularjs.org},
+	urldate =		"2016-09-21"
+}
+
+@online{bootstrap,
+	title =			{Bootstrap -The world's most popular mobile-first and responsive front-end framework},
+	url =				{http://getbootstrap.com},
+	urldate =		"2016-09-21"
 }
