--- a/doc/literatura.bib
+++ b/doc/literatura.bib
@@ -44,3 +44,9 @@
 	url =				{http://getbootstrap.com},
 	urldate =		"2016-09-21"
 }
+
+@online{instaparse,
+	title =			{Instaparse Context-free Grammer Parser Generator},
+	url =				{https://github.com/Engelberg/instaparse},
+	urldate =		"2016-09-22"
+}
